--- a/_static/gluon.css
+++ b/_static/gluon.css
@@ -1,3 +1,9 @@
 code, .rst-content tt, .rst-content code {
   font-size: 85%;
 }
+
+.rst-content img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
